--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
      <header class="header_top maxWidth">
           <img src="images/logo_mob.svg" alt="range hotel" class="header_top_logo">
-          <nav class="nav_header"> <!--nav-bar-->
+          <nav class="nav_header"> <!--nav-bar top header nav-->
                <ul class="nav_menu">
                     <li class="nav_item"><a href="#" class="nav_link">Home</a></li>
                     <li class="nav_item"><a href="#"class="nav_link">Hospedagem</a></li>
@@ -18,8 +18,21 @@
                     <li class="nav_item"><a href="#"class="nav_link">Localização</a></li>
                </ul>     
                
-          </nav>
+          </nav> 
      </header>
+
+     <section class="heroBanner">
+          <div class="maxWidth">
+               <div class="heroBanner_iconPlay">
+                    <img src="images/icon_play.svg" alt="">
+               </div>
+               <h1 class="heroBanner_title">
+                    Descubra e surpreenda-se
+               </h1>
+               <h2 class="heroBanner_subtitle">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus placeat voluptas at ea optio quidem!</h2>
+               <a href="" class="heroBanner_btn">Descubra</a>
+          </div>
+     </section>
      
 </body>
 </html>
