--- a/index.html
+++ b/index.html
@@ -22,14 +22,15 @@
      </header>
 
      <section class="heroBanner">
-          <div class="maxWidth">
+          <div class=" heroBanner_contain maxWidth">
                <div class="heroBanner_iconPlay">
                     <img src="images/icon_play.svg" alt="">
                </div>
                <h1 class="heroBanner_title">
                     Descubra e surpreenda-se
                </h1>
-               <h2 class="heroBanner_subtitle">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus placeat voluptas at ea optio quidem!</h2>
+               <h2 class="heroBanner_subtitle">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus placeat voluptas at ea optio quidem! Lorem ipsum dolor sit amet.
+               </h2>
                <a href="" class="heroBanner_btn">Descubra</a>
           </div>
      </section>
